--- a/app/code/Gradus/InTheBox/view/adminhtml/templates/product/edit/inthebox.phtml
+++ b/app/code/Gradus/InTheBox/view/adminhtml/templates/product/edit/inthebox.phtml
@@ -94,7 +94,7 @@ if ($warranty == null) { $warrantyString = "No warranty"; }
             '<td class="data-grid-draggable-row-cell">'+
             '<div class="draggable-handle_inthebox"></div></td>'+
             '<td class="posrow">'+clb+'</td><td>'+
-            '<input class="admin__control-text" name="inthebox['+clb+'][name]" data-form-part="product_form" id="inthebox[' + clb + '][count]" style="width:100%;" value="" /></td>'+
+            '<input class="admin__control-text" name="inthebox['+clb+'][count]" data-form-part="product_form" id="inthebox[' + clb + '][count]" style="width:100%;" value="" /></td>'+
             '<td><textarea name="inthebox['+clb+'][value]" data-form-part="product_form" style="width:100%;"></textarea></td>'+
             '</td><td><a href"#" onclick="deleteinthebox(\'inthebox_row_'+clb+'\')"><img src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png'); ?>" style="width:20px"></a></td></tr>';
         $q('#InTheBox_table > tbody').append(q);
