inthebox draggable handle updated

--- a/app/code/Gradus/InTheBox/view/adminhtml/templates/product/edit/inthebox.phtml
+++ b/app/code/Gradus/InTheBox/view/adminhtml/templates/product/edit/inthebox.phtml
@@ -80,7 +80,7 @@ if ($warranty == null) { $warrantyString = "No warranty"; }
     var $q = jQuery.noConflict();
     $q( document ).ready(function() {
         $q('#InTheBox_table > tbody').sortable({
-            handle: '.draggable-handle',
+            handle: '.draggable-handle_inthebox',
             revert: 300,
             placeholder: "ui-state-in_the_box myHover",
             tolerance: "intersect",
