checks for has manual to not be included in count of actual fields

--- a/app/code/Gradus/InTheBox/view/adminhtml/templates/product/edit/inthebox.phtml
+++ b/app/code/Gradus/InTheBox/view/adminhtml/templates/product/edit/inthebox.phtml
@@ -2,7 +2,12 @@
 $tech = $this->getProduct()->getData('in_the_box');
 $info = json_decode($tech, true);
 $count = 1;
-$manual = false;
+if (isset($info['has_manual'])) {
+    $manual = $info['has_manual'];
+    unset($info['has_manual']);
+} else {
+    $manual = false;
+}
 
 $warranty = $this->getProduct()->getData('warranty');
 if ($warranty < 12) {
