Added back in accessories and adding in parts

--- a/app/code/Gradus/Compatibility/view/adminhtml/layout/catalog_product_new.xml
+++ b/app/code/Gradus/Compatibility/view/adminhtml/layout/catalog_product_new.xml
@@ -22,6 +22,10 @@
                 <argument name="name" xsi:type="string">product-compatibility</argument>
                 <argument name="block" xsi:type="string">product.compatibility</argument>
             </action>
+            <action method="addTab">
+                <argument name="name" xsi:type="string">product-accessories</argument>
+                <argument name="block" xsi:type="string">product.accessories</argument>
+            </action>
         </referenceBlock>
     </body>
 </page>
